--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.2.0",
     "nodemon": "^2.0.22",
-    "sequelize": "^6.30.0",
-    "socket.io": "^4.6.1"
+    "sequelize": "^6.30.0"
   }
 }
